# webfin

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Jenkinsfile  MANIFEST.in  README.rst  requirements.txt  setup.cfg  setup.py  tox.ini
devDocker/: DockerfileDev  run_it  start.sh
docker/: Dockerfile  requirements.txt  run_it
src/webfin/: __init__.py  __main__.py  cli.py  settings.py
src/webfin/core/: CalculationRequest.py  CalculationResponse.py  Calculator.py  __init__.py  broker.py
src/webfin/fin/: BsmCalculator.py  __init__.py  broker.py  bsm.py
src/webfin/web/: apiv1.py  forms.py  middlewares.py  opendoc.yaml  routes.py  views.py
src/webfin/web/static/: style.css
src/webfin/web/templates/: base.html  eval.html  option.html  result.html
tests/: conftest.py  test_api.py  test_bsm.py  test_bsm_broker.py  test_form_validation.py  test_http.py
tests/test_utils/: __init__.py  option_utils.py
